# PVCTools

./: CMakeLists.txt  README.md
PCVTools_Overwrite/: Environment.py  SegmentBAM.py  SegmentFA.py  SmallFA.py  SplitBAM.py  SplitFA.py  StitchVCF.py  Submit.py  WriteScript.py
PVCTools_HPC_3.7/include/: SmallFA.h  Submit.h
PVCTools_HPC_3.7/src/childnode/: JudgeVCF.cpp  SegmentBAM.cpp  SegmentFA.cpp
PVCTools_HPC_4.0/: run.pbs  更新日志.txt
PVCTools_HPC_4.0/src/childnode/: JudgeVCF.cpp  SegmentBAM.cpp  SegmentFA.cpp  SplitFA.cpp  Submit.cpp
PVCTools_HPC_4.1/: CMakeLists.txt  PVCTools  config  更新日志.txt
PVCTools_HPC_4.1/include/: SplitBAM.h
PVCTools_HPC_4.1/src/childnode/: SegmentBAM.cpp  SmallFA.cpp  Submit.cpp
PVCTools_HPC_4.1/test/: GetVCF.err
PVCTools_alpha/: README  Update_log.txt
PVCTools_alpha/include/: SegmentFA.h
PVCTools_alpha/src/childnode/: JudgeVCF.cpp  SmallFA.cpp  SplitBAM.cpp  Submit.cpp  main.cpp
PVCTools_alpha_v2.5/: CMakeLists.txt  Makefile  config  更新日志.txt
PVCTools_alpha_v2.5/include/: Environment.h  JudgeVCF.h  SegmentBAM.h  SegmentFA.h  SmallFA.h  SplitBAM.h  SplitFA.h  StitchVCF.cpp  StitchVCF.h  Submit.h  WriteScript.h  main.h  stichvcftext.cpp
PVCTools_alpha_v2.5/src/childnode/: Environment.cpp  JudgeVCF.cpp  SegmentBAM.cpp  SegmentFA.cpp  SmallFA.cpp  SplitBAM.cpp  SplitFA.cpp  StitchVCF.cpp  Submit.cpp  main.cpp
PVCTools_alpha_v2.5/src/headnode/: Environment.cpp  WriteScript.cpp
PVCTools_alpha_v2.6/include/: Environment.h  SegmentBAM.h  main.h
PVCTools_alpha_v2.6/src/childnode/: SegmentBAM.cpp  SegmentFA.cpp  SmallFA.cpp  SplitBAM.cpp  SplitFA.cpp  StitchVCF.cpp  Submit.cpp  main.cpp
PVCTools_alpha_v2.6/src/headnode/: Environment.cpp  WriteScript.cpp
PVCTools_alpha_v2.7/: 更新日志.txt
PVCTools_alpha_v2.7/include/: Environment.h  SegmentBAM.h
PVCTools_alpha_v2.7/src/childnode/: Environment.cpp  JudgeVCF.cpp  SegmentBAM.cpp  SegmentFA.cpp  SmallFA.cpp  SplitBAM.cpp  Submit.cpp
PVCTools_alpha_v2.7/src/headnode/: WriteScript.cpp
PVCTools_alpha_v2.8/: config  更新日志.txt
PVCTools_alpha_v2.8/include/: Environment.h  JudgeVCF.h  SegmentFA.h  main.h
PVCTools_alpha_v2.8/src/childnode/: JudgeVCF.cpp  SegmentBAM.cpp  SegmentFA.cpp  SplitBAM.cpp  Submit.cpp
PVCTools_alpha_v2.8/src/headnode/: WriteScript.cpp
PVCTools_alpha_v3.0/: Makefile  config
PVCTools_alpha_v3.0/include/: JudgeVCF.h  SegmentBAM.h  SmallFA.h  SplitBAM.h
PVCTools_alpha_v3.0/src/childnode/: Environment.cpp  JudgeVCF.cpp  SegmentBAM.cpp  SegmentFA.cpp  SmallFA.cpp  SplitBAM.cpp  (+2 more)
PVCTools_alpha_v3.2/: 更新日志.txt
PVCTools_alpha_v3.2/include/: SplitFA.h
PVCTools_alpha_v3.4/: README
PVCTools_alpha_v3.5/: 更新日志.txt
PVCTools_alpha_v3.5/include/: SegmentBAM.h
PVCTools_alpha_v3.6/: 更新日志.txt
PVCTools_alpha_v3.7 for HPC/: 更新日志.txt
PVCTools_alpha_v3.7 for HPC/include/: Environment.h
PVCTools_alpha_v3.7/include/: main.h
PVCTools_alpha_v3.8/: 更新日志.txt
PVCTools_alpha_v3.9/: 更新日志.txt
PVCTools_alpha_v4.0/: 更新日志.txt
PVCTools_alpha_v4.0/include/: WriteScript.h
PVCTools_python/: SegmentFA.py  SplitBAM.py  SplitFA.py  WriteScript.py
(+30 files in other folders)
